# uv-sample

./: README.md  pyproject.toml
src/sample/: cli.py  tools.py  version.py
tests/: .coverage  test_token.py
tests/pytest_howto/: test_capture_stdout_stderr_output.py  test_mark_parametrize.py  test_monkeypatch.py  test_run_doctests.py
